fix bug calender on mobile

--- a/src/components/CalendarDesktop/style.scss
+++ b/src/components/CalendarDesktop/style.scss
@@ -1,4 +1,7 @@
 .CalendarDesktop {
+  tr {
+    height: 10px !important;
+  }
   @media (max-width: 768px) {
     display: none;
   }
